# nest

./: .gitattributes  .gitignore  .utcp_config.json  AGENTS.md  README.md  graphql.config.js  graphql.config.json  nest.code-workspace  package.json
rust/: .clippy.toml  .editorconfig  .env  .env.prod  .env.test  .gitignore  .npmrc  AGENTS.md  Cargo.toml  build.rs  ecosystem.config.js  ecosystem.config.json  graphql.config.js  main.rs  package.json  readme.md  schema.rs  tsconfig.json
rust/.agents/skills/backend-api/: SKILL.md
rust/.agents/skills/excel-export/: SKILL.md
rust/.agents/skills/graphql-api/: SKILL.md
rust/.agents/skills/rust-cron-job/: SKILL.md
rust/.agents/skills/rust-test/: SKILL.md
rust/.agents/skills/websocket/: SKILL.md
rust/.agents/skills/wx-pay/: SKILL.md
rust/.ai/: excel-export-guide.md  rust-graphql-guide.md
rust/.cargo/: config.toml
rust/.github/: copilot-instructions.md
rust/.github/skills/excel-export/: SKILL.md
rust/.github/skills/graphql-api/: SKILL.md
rust/.github/skills/rust-test/: SKILL.md
rust/.github/skills/wx-pay/: SKILL.md
rust/app/: Cargo.toml  lib.rs
rust/app/base/: mod.rs
rust/app/base/menu/: menu_dao.rs  menu_graphql.rs  menu_model.rs  menu_resolver.rs  menu_service.rs  mod.rs
rust/app/bpm/: mod.rs
rust/app/bpm/process_def/: mod.rs  process_def_graphql.rs  process_def_resolver.rs  process_def_service.rs
rust/app/cron/: mod.rs
rust/app/cron/cron_job/: cron_job_dao.rs  cron_job_graphql.rs  cron_job_resolver.rs  cron_job_service.rs
rust/app/cron/job/: job_dao.rs
rust/app/nuxt/: mod.rs
rust/app/nuxt/seo/: mod.rs  seo_graphql.rs  seo_resolver.rs  seo_service.rs
rust/app/wx/: mod.rs
rust/app/wx/pay_transactions_jsapi/: mod.rs  pay_transactions_jsapi_dao.rs  pay_transactions_jsapi_graphql.rs  pay_transactions_jsapi_model.rs  pay_transactions_jsapi_resolver.rs  pay_transactions_jsapi_service.rs
rust/app/wx/wx_app_token/: mod.rs  wx_app_token_model.rs  wx_app_token_service.rs
rust/app/wx/wx_pay_notice/: wx_pay_notice_resful.rs  wx_pay_notice_router.rs  wx_pay_notice_service.rs
rust/app/wx/wx_refund/: mod.rs  wx_refund_graphql.rs  wx_refund_resolver.rs  wx_refund_service.rs
rust/app/wx/wx_refund_notice/: mod.rs  wx_refund_notice_resful.rs  wx_refund_notice_router.rs  wx_refund_notice_service.rs
rust/app/wx/wx_usr/: wx_usr_model.rs  wx_usr_resful.rs  wx_usr_router.rs  wx_usr_service.rs
rust/app/wxwork/wxw_app_token/: mod.rs  wxw_app_token_dao.rs  wxw_app_token_graphql.rs  wxw_app_token_model.rs  wxw_app_token_resolver.rs  wxw_app_token_service.rs
rust/app/wxwork/wxw_msg/: wxw_msg_dao.rs  wxw_msg_model.rs
rust/app/wxwork/wxw_usr/: wxw_usr_graphql.rs  wxw_usr_model.rs  wxw_usr_resolver.rs  wxw_usr_service.rs
rust/app_macro/: .gitignore  Cargo.toml
rust/app_macro/src/: lib.rs
rust/base/: Cargo.toml
rust/src/: main.rs  schema.rs
rust/src/common/: context.rs  id.rs  macros.rs  mod.rs
rust/src/common/app/: app_dao.rs  app_resolver.rs  app_service.rs
rust/src/common/auth/: auth_dao.rs  auth_model.rs
rust/src/common/cache/: cache_dao.rs  cache_graphql.rs  cache_resolver.rs  cache_service.rs  mod.rs
rust/src/common/data_permit/: mod.rs
rust/src/common/exceptions/: mod.rs  service_exception.rs
rust/src/common/field_permit/: field_permit_service.rs
rust/src/common/gql/: base.graphql  gql_router.rs  mod.rs  model.rs  query_root.rs  request_id.rs
rust/src/common/health/: health_dao.rs  health_resful.rs  health_router.rs  health_service.rs  mod.rs
rust/src/common/i18n/: mod.rs
rust/src/common/lang/: lang_dao.rs  lang_resolver.rs  mod.rs
rust/src/common/operation_record/: operation_record_service.rs
rust/src/common/options/: options_graphql.rs  options_service.rs
rust/src/common/org/: org_graphql.rs  org_resolver.rs  org_service.rs
rust/src/common/oss/: mod.rs  oss_dao.rs  oss_graphql.rs  oss_model.rs  oss_resolver.rs  oss_router.rs  oss_service.rs
rust/src/common/permit/: permit_model.rs
rust/src/common/script/: build.js  build.ts  graphql_codegen_config.ts  graphql_codegen_config.yml  graphql_codegen_scalars.ts  graphql_pc_ids.ts  publish.js  schema.js
rust/src/common/tenant/: mod.rs  tenant_graphql.rs
rust/src/common/tmpfile/: mod.rs  tmpfile_dao.rs  tmpfile_router.rs  tmpfile_service.rs
rust/src/common/util/: dao.rs  http.rs  mod.rs  string.rs
rust/src/common/validators/: chars_max_length.rs  chars_min_length.rs  email.rs  ip.rs  max_items.rs  maximum.rs  min_items.rs  minimum.rs  mod.rs  multiple_of.rs  regex.rs  url.rs
rust/src/common/websocket/: mod.rs  websocket_constants.rs  websocket_dao.rs  websocket_router.rs
rust/src/common/wx_pay/: decode.rs  fetch.rs  mod.rs  wx_pay.rs  wxpay.rs
rust/src/common/wx_pay/api/: data.rs  mod.rs  pay_api.rs
rust/src/src/: gql_router.rs  mod.rs  query_root.rs  src_query.rs
rust/src/src/base/: mod.rs
rust/src/src/base/data_permit/: data_permit_dao.rs
rust/src/src/base/dept/: dept_dao.rs  dept_graphql.rs  dept_resolver.rs  dept_service.rs  mod.rs
rust/src/src/base/dict_detail/: dict_detail_dao.rs  dict_detail_graphql.rs  dict_detail_model.rs  dict_detail_resolver.rs  dict_detail_service.rs  mod.rs
rust/src/src/base/dictbiz_detail/: dictbiz_detail_dao.rs  dictbiz_detail_graphql.rs  dictbiz_detail_model.rs  dictbiz_detail_resolver.rs  dictbiz_detail_service.rs  mod.rs
rust/src/src/base/field_permit/: field_permit_graphql.rs  field_permit_resolver.rs  field_permit_service.rs
rust/src/src/base/i18n/: i18n_dao.rs  i18n_graphql.rs  i18n_resolver.rs  i18n_service.rs  mod.rs
rust/src/src/base/lang/: lang_dao.rs  lang_graphql.rs  lang_resolver.rs  lang_service.rs  mod.rs
rust/src/src/base/menu/: menu_dao.rs  menu_graphql.rs  menu_model.rs  menu_resolver.rs  menu_service.rs  mod.rs
rust/src/src/base/operation_record/: mod.rs  operation_record_service.rs
rust/src/src/base/optbiz/: optbiz_graphql.rs  optbiz_resolver.rs  optbiz_service.rs
rust/src/src/base/options/: mod.rs  (+4 more)
rust/src/src/usr/: mod.rs
rust/src/src/wx/: mod.rs
rust/src/src/wxwork/: mod.rs
rust/src/starwars/: mod.rs  model.rs
(+2262 files in other folders)
