[package]
name = "rust"
version = "0.0.0"
edition = "2024"
default-run = "rust"

[workspace.dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
mime = "0.3.17"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-attributes = "0.1.28"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "net", "fs"] }
poem = { version = "3.1.9", features = ["multipart", "tempfile", "eyre06", "tokio-metrics", "websocket"] }
async-graphql = { version = "7.0.16", features = ["decimal", "bigdecimal", "time", "chrono", "chrono-tz", "smol_str", "tokio-sync", "tracing"] }
smol_str = { version = "0.3.2", features = ["serde"] }
slab = "0.4.9"
chrono = { version = "0.4.40", features = ["serde"] }
# anyhow = "1.0.98"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "uuid", "chrono", "time", "bigdecimal", "rust_decimal", "json"] }
dotenv = "0.15.0"
rust-s3 = { version = "0.35.1", features = ["tokio-rustls-tls","fail-on-err","tags"], default-features = false }
imstr = { version = "0.2", features = ["serde"] }
jwt = "0.16.0"
sha2 = "0.10.8"
sha1 = "0.10.6"
hmac = { version = "0.12.1", features = ["reset"] }
# protobuf = "3.7.1"
hex-literal = "1.0.0"
hex = "0.4.3"
base64 = "0.22.1"
utf8_slice = "1.0.0"
reqwest = { version = "0.12.15", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
encoding_rs = "0.8.35"
urlencoding = "2.1.3"
url = "2.5.4"
# sqlformat = "0.3.5"
smallvec = { version = "1.15.0", features = ["union", "serde"] }
# downcast-rs = "2.0.1"
uuid = { version = "1.16.0", features = ["serde", "v4", "fast-rng"] }
deadpool = "0.12.2"
deadpool-redis = "0.20.0"
redis = { version = "0.31.0", features = ["tokio-comp"], default-features = false }
# pin-project = "1.1"
bigdecimal = "0.4.8"
time = "0.3.41"
rust_decimal = { version = "1.37.1", features = ["maths"]}
rust_decimal_macros = "1.37.1"
# enum_dispatch = "0.3.13"
# pin-project-lite = "0.2.16"
# rayon = "1.10.0"
regex = "1.11.1"
# yarte = "0.15.7"
image = { version = "0.25.6", features = ["webp"] }
delay_timer = "0.11.6"
num-traits = "0.2.19"
fast_chemail = "0.9.6"
http = "1.3.1"
futures = "0.3.31"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"]}
function_name = "0.3.0"
enum-iterator = "2.1.0"
derive_more = { version = "2.0.1", features = ["full"] }
derive_builder = "0.20.2"
strum = { version = "0.27.1", features = ["derive"] }
itertools = "0.14.0"
color-eyre = "0.6.3"
rand = "0.9.1"
rsa = { version = "0.9.8", features = ["sha2"] }
aes-gcm = "0.10.3"
pkcs8 = "0.10.2"
serde_with = "3.12.0"

# 安全地使用无proc宏的自引用结构
# self_cell = "1.2.0"

[dependencies]
serde_json.workspace = true
serde.workspace = true
mime.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-attributes.workspace = true
tokio.workspace = true
poem.workspace = true
async-graphql.workspace = true
smol_str.workspace = true
slab.workspace = true
chrono.workspace = true
# anyhow.workspace = true
sqlx.workspace = true
dotenv.workspace = true
rust-s3.workspace = true
imstr.workspace = true
jwt.workspace = true
sha2.workspace = true
sha1.workspace = true
hmac.workspace = true
# protobuf.workspace = true
hex-literal.workspace = true
hex.workspace = true
base64.workspace = true
utf8_slice.workspace = true
reqwest.workspace = true
encoding_rs.workspace = true
urlencoding.workspace = true
url.workspace = true
# sqlformat.workspace = true
smallvec.workspace = true
# downcast-rs.workspace = true
uuid.workspace = true
deadpool.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
# pin-project.workspace = true
bigdecimal.workspace = true
time.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
# enum_dispatch.workspace = true
# pin-project-lite.workspace = true
# rayon.workspace = true
regex.workspace = true
# yarte.workspace = true
image.workspace = true
delay_timer.workspace = true
num-traits.workspace = true
fast_chemail.workspace = true
http.workspace = true
futures.workspace = true
aes.workspace = true
cbc.workspace = true
function_name.workspace = true
enum-iterator.workspace = true
derive_more.workspace = true
derive_builder.workspace = true
strum.workspace = true
itertools.workspace = true
color-eyre.workspace = true
rand.workspace = true
rsa.workspace = true
aes-gcm.workspace = true
pkcs8.workspace = true
serde_with.workspace = true

# 安全地使用无proc宏的自引用结构
# self_cell = "1.1"

generated = { path = "./generated" }
app = { path = "./app" }

[workspace]
members = [
  "generated",
  "app"
]
resolver = "2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

# [build-dependencies]
# protobuf-codegen = "3.7.1"

[[bin]]
name = "rust"
path = "main.rs"

[profile.release]
panic = "unwind"
debug = 0

[profile.release.package.generated]
debug = 1

[profile.release.package.app]
debug = 2

[profile.dev]
debug = 0

[profile.dev.package.generated]
debug = 1

[profile.dev.package.app]
debug = 2

[[bin]]
name = "schema"
path = "schema.rs"
