[package]
name = "app"
version = "0.0.0"
edition = "2024"

[dependencies]
serde_json.workspace = true
serde.workspace = true
mime.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-attributes.workspace = true
tokio.workspace = true
poem.workspace = true
async-graphql.workspace = true
smol_str.workspace = true
slab.workspace = true
chrono.workspace = true
# anyhow.workspace = true
sqlx.workspace = true
dotenv.workspace = true
rust-s3.workspace = true
imstr.workspace = true
jwt.workspace = true
sha2.workspace = true
sha1.workspace = true
hmac.workspace = true
# protobuf.workspace = true
hex-literal.workspace = true
hex.workspace = true
base64.workspace = true
utf8_slice.workspace = true
reqwest.workspace = true
encoding_rs.workspace = true
urlencoding.workspace = true
url.workspace = true
# sqlformat.workspace = true
smallvec.workspace = true
# downcast-rs.workspace = true
uuid.workspace = true
deadpool.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
# pin-project.workspace = true
bigdecimal.workspace = true
time.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
# enum_dispatch.workspace = true
# pin-project-lite.workspace = true
# rayon.workspace = true
regex.workspace = true
# yarte.workspace = true
image.workspace = true
delay_timer.workspace = true
num-traits.workspace = true
fast_chemail.workspace = true
http.workspace = true
futures.workspace = true
aes.workspace = true
cbc.workspace = true
function_name.workspace = true
enum-iterator.workspace = true
derive_more.workspace = true
derive_builder.workspace = true
strum.workspace = true
itertools.workspace = true
color-eyre.workspace = true
rand.workspace = true
rsa.workspace = true
aes-gcm.workspace = true
pkcs8.workspace = true
serde_with.workspace = true
csv.workspace = true
rust_xlsxwriter.workspace = true

generated = { path = "../generated" }

[lib]
path = "lib.rs"
